edgex/k8s/base/adapter-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgex-adapter-controller
  labels:
    app.kubernetes.io/name: edgex-adapter-controller
    app.kubernetes.io/part-of: edgex-system
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: edgex-adapter-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: edgex-adapter-controller
        app.kubernetes.io/part-of: edgex-system
    spec:
      serviceAccountName: edgex-adapter-controller
      nodeSelector:
        kubernetes.io/hostname: etri-ser0002-cgnmsb
      terminationGracePeriodSeconds: 20
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: edgex-adapter-controller
          image: 192.168.0.56:5000/edge-adapter-controller@sha256:540be3b209cbf91c4a378dffbb759f0dc3a2017ce147e4d574d329a32de07bcc
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 2
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 2001
            runAsGroup: 2001
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: edgex-adapter-controller
  labels:
    app.kubernetes.io/name: edgex-adapter-controller
    app.kubernetes.io/part-of: edgex-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: edgex-adapter-controller
  ports:
    - name: http
      port: 8080
      targetPort: http
