edgex/k8s/base/adapter-controller/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edgex-adapter-controller
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: edgex-adapter-controller
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              app: state-aggregator
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: edge-device-discovery
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: edgex-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: edgex-core-metadata
      ports:
        - protocol: TCP
          port: 59881
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: edgex-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: edgex-core-data
      ports:
        - protocol: TCP
          port: 59880
    - ports:
        - protocol: TCP
          port: 443
